hphp/hack/test/typecheck/reactive/mutable_as_hint4.php
<?hh
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

class A {
}

<<__Rx>>
function f((function(Mutable<A>): void) $a): void {
}
